--- a/_posts/2018-11-29-conf-KOSSCON2018.md
+++ b/_posts/2018-11-29-conf-KOSSCON2018.md
@@ -1,7 +1,7 @@
 ---
 title: KOSSCON 2018
 categories:
- - Conference, Korean, Open Source, Software, Java
+ - Conference
 tags:
  - conference, serverless, Monolith, Netflix, microservice
 ---
