fixing python language identifier in code sections

--- a/_posts/2021-11-11-s3-select.md
+++ b/_posts/2021-11-11-s3-select.md
@@ -26,7 +26,7 @@ Important to remember S3 Select is used when query is performed on single S3 obj
 
 Below is a quick python lambda-example that does select inside the S3, parquet format:
 
-```Python
+```python
 import json
 import boto3
 s3 = boto3.client('s3')
